Remove profiles endpoint and textures signing mechanism
