# docs/swagger.yml
@@ -165,68 +165,3 @@ paths:
           description: The profiles has been successfully deleted.
         401:
           $ref: "#/components/responses/UnauthorizedError"
-
-  /api/signer:
-    post:
-      operationId: signData
-      summary: Signs the sent data.
-      tags:
-        - signer
-        - api
-      security:
-        - BearerAuth: [ sign ]
-      requestBody:
-        content:
-          "*":
-            schema:
-              description: Accepts data in any format and generates a signature for it.
-              type: string
-      responses:
-        200:
-          description: Successfully signed data.
-          content:
-            application/octet-stream+base64:
-              schema:
-                description: A base64 encoded signature for the passed data.
-                type: string
-        401:
-          $ref: "#/components/responses/UnauthorizedError"
-
-  /api/signer/public-key.pem:
-    get:
-      operationId: signerPublicKeyPem
-      summary: Get signer's public key in PEM format.
-      tags:
-        - signer
-        - api
-      security:
-        - BearerAuth: [ sign ]
-      responses:
-        200:
-          description: The public file in PEM format.
-          content:
-            application/x-pem-file:
-              schema:
-                type: string
-        401:
-          $ref: "#/components/responses/UnauthorizedError"
-
-  /api/signer/public-key.der:
-    get:
-      operationId: signerPublicKeyPem
-      summary: Get signer's public key in DER format.
-      tags:
-        - signer
-        - api
-      security:
-        - BearerAuth: [ sign ]
-      responses:
-        200:
-          description: The public file in PEM format.
-          content:
-            application/octet-stream:
-              schema:
-                type: string
-                format: binary
-        401:
-          $ref: "#/components/responses/UnauthorizedError"
